# ChangeLog for x11-misc/gnome-schedule
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  gnome-schedule-2.0.2.ebuild:
  Update deps according to Kjang Gwreuung-Kuq in bug 222957

  27 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +gnome-schedule-2.0.2.ebuild:
  Version bump (untested) to hopefully fix bug 222957

  28 Nov 2006; Stefan Schweizer <genstef@gentoo.org>
  -gnome-schedule-1.0.0.ebuild:
  remove obsolete old ebuilds, thanks pcheck

  20 Nov 2006; Luca Marturana (luca89) <lucamarturana@gmail.com>
  +gnome-schedule-1.1.0.ebuild:
  Version bump

  05 Jul 2006; Luca Marturana <lucamarturana@gmail.com ChangeLog:
  Initial import, see bug #100913
