@@ -1,6 +1,4 @@
-DIST gnome-schedule-1.1.0.tar.gz 757052 RMD160 e67a5147b50379ceac0d7a18c67bca50e2f9419c SHA1 5d2aa2f31494fc67d21ac640dfa0269df037755b SHA256 616df5fb020039478c3b23419a31291e71f0b2a800ed459fdd9f222f8da45ebf
 DIST gnome-schedule-2.0.2.tar.gz 1078673 RMD160 652c58280b2ce9c6e0e3a544f9424d9e2d892750 SHA1 035b526c5f84b29c3006af3873ee069156f15f18 SHA256 09ade88565bf21be19ebdece2399ad122fc1872df7bcda836e286a493aa551ab
-EBUILD gnome-schedule-1.1.0.ebuild 652 RMD160 61fd7fbc4e15a134b0a2cfee4e445974abbf1ef9 SHA1 e389cd8acae322775c683ee4f20eb6a0ebaa7c11 SHA256 1446a658df5eb369f9b8db5049082f83972eaf48027befc1ef7b010edc3b1032
 EBUILD gnome-schedule-2.0.2.ebuild 737 RMD160 bea3a7237f518ca910e7a2c750564d65516b0712 SHA1 6253cd188cf8c71af2e106f5fce3337e281a5cb1 SHA256 9475a4054b3327b00ebb1ad9948058794ab3a9ce27f77dfa03a7c8704782be7d
-MISC ChangeLog 766 RMD160 7f3246d6d424ff270c8317aaecbe704e78fb6320 SHA1 ea3f596f1d070044001f996d1ba0283e81328080 SHA256 aac2559c22f40f5776255ca36f88b13bc8d08a1ba67c41f65b593e2a9da16339
+MISC ChangeLog 889 RMD160 dd8ac9a30d765028aad849d3ec55e8c54ad87bb3 SHA1 52f9215bc09151eb2ff16bc173dfe0929e852a95 SHA256 df5dda7fec316ef0ee111e51791f38820121d0783b0ce62139d29f7bcb78f57a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
