@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
+  -gnome-schedule-1.1.0.ebuild:
+  Remove old version
+
   10 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   gnome-schedule-2.0.2.ebuild:
   Update deps according to Kjang Gwreuung-Kuq in bug 222957
